Template server basic testing with pytest

--- a/{{cookiecutter.project_dir_name}}/env.sample
+++ b/{{cookiecutter.project_dir_name}}/env.sample
@@ -3,3 +3,5 @@ MONGODB_URL=mongodb://{{cookiecutter.db_host}}/{{cookiecutter.db_name}}
 MONGODB_DBNAME={{cookiecutter.db_name}}
 MAX_CONNECTIONS_COUNT={{cookiecutter.db_max_conn_count}}
 MIN_CONNECTIONS_COUNT={{cookiecutter.db_min_conn_count}}
+TEST_DB_NAME={{cookiecutter.test_db_name}}
+TEST_MONGODB_URL=mongodb://{{cookiecutter.db_host}}/{{cookiecutter.test_db_name}}
