--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install Pipenv and Cookiecutter
         run: |
           python -m pip install --upgrade pip
-          pip install pipenv Cookiecutter
+          pip install pipenv cookiecutter
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.7.0
         with:
@@ -35,4 +35,6 @@ jobs:
       - name: Create Project
         run: cookiecutter . --no-input
       - name: Run Tests
-        run: pipenv run pytest -s -vv
+        run: |
+          cd demo-project
+          pipenv run pytest -s -vv
