--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,10 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: "3.10"
-      - name: Install Pipenv and Cookiecutter
+      - name: Install Poetry and Cookiecutter
         run: |
           python -m pip install --upgrade pip
-          pip install pipenv cookiecutter
+          pip install poetry cookiecutter
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.7.0
         with:
@@ -37,4 +37,4 @@ jobs:
       - name: Run Tests
         run: |
           cd demo-project
-          pipenv run pytest -s -vv
+          ./scripts/test.sh
