Dockerfile fix: Avoid to install dev packages in the docker image

--- a/{{cookiecutter.project_dir_name}}/Dockerfile
+++ b/{{cookiecutter.project_dir_name}}/Dockerfile
@@ -7,9 +7,9 @@ ENV PYTHONUNBUFFERED 1
 RUN pip install --upgrade pip
 RUN pip install poetry
 COPY pyproject.toml poetry.lock /tmp
-RUN cd /tmp \
-        && poetry export -f requirements.txt -o requirements.txt \
-        && pip install -r requirements.txt
+RUN cd /tmp && \
+        poetry export --without-hashes --without dev -f requirements.txt -o requirements.txt && \
+        pip install -r requirements.txt
 
 COPY start.sh /server/
 COPY app /server/app
