--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,12 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -26,15 +19,9 @@ jobs:
           python-version: "3.10"
       - name: Install Poetry and Cookiecutter
         run: |
-          python -m pip install --upgrade pip
-          pip install poetry cookiecutter
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.7.0
-        with:
-          mongodb-version: 3.6
-      - name: Create Project
-        run: cookiecutter . --no-input
-      - name: Run Tests
-        run: |
-          cd demo-project
-          ./scripts/test.sh
+          sudo python -m pip install --upgrade pip
+          sudo pip install poetry cookiecutter
+      - name: Test Server Code
+        run: sudo make test-server-code
+      - name: Test Docker Compose
+        run: sudo make test-docker-compose
