Add user in Dockerfile for security concern

--- a/{{cookiecutter.project_dir_name}}/Dockerfile
+++ b/{{cookiecutter.project_dir_name}}/Dockerfile
@@ -1,18 +1,22 @@
 FROM python:3.10.0-slim-bullseye
 
-WORKDIR /server
-
+ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
+
+RUN adduser --disabled-password --gecos '' appuser
+WORKDIR /server
 
 RUN pip install --upgrade pip
 RUN pip install poetry
-COPY pyproject.toml poetry.lock /tmp
-RUN cd /tmp && \
-        poetry export --without-hashes --without dev -f requirements.txt -o requirements.txt && \
+
+COPY pyproject.toml poetry.lock ./
+RUN poetry export --without-hashes --without dev -f requirements.txt -o requirements.txt && \
+        chown appuser:appuser requirements.txt && \
         pip install -r requirements.txt
 
-COPY start.sh /server/
-COPY app /server/app
+USER appuser
+COPY --chown=appuser:appuser start.sh /server/
+COPY --chown=appuser:appuser app /server/app
 
 RUN chmod +x /server/start.sh
 ENTRYPOINT [ "/server/start.sh" ]
