--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
           python-version: "3.10"
       - name: Install Poetry and Cookiecutter
         run: |
-          sudo python -m pip install --upgrade pip
-          sudo pip install poetry cookiecutter
+          python -m pip install --upgrade pip
+          pip install poetry cookiecutter
       - name: Test Server Code
         run: sudo make test-server-code
       - name: Test Docker Compose
