--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install poetry cookiecutter
       - name: Test Server Code
-        run: sudo make test-server-code
+        run: make test-server-code
       - name: Test Docker Compose
-        run: sudo make test-docker-compose
+        run: make test-docker-compose
