--- a/{{cookiecutter.project_dir_name}}/pyproject.toml
+++ b/{{cookiecutter.project_dir_name}}/pyproject.toml
@@ -7,16 +7,17 @@ packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.75.1"
-motor = "^2.5.1"
-gunicorn = "^20.1.0"
+fastapi = "^0.115.0"
+motor = "^3.6.0"
+gunicorn = "^23.0.0"
 PyYAML = "^6.0"
-uvicorn = "^0.17.6"
+uvicorn = {extras = ["standard"], version = "^0.32.0"}
 
-[tool.poetry.group.dev.dependencies]
-pytest-asyncio = "^0.18.3"
-mypy = "^0.942"
-requests = "^2.27.1"
+[tool.poetry.dev-dependencies]
+pytest-asyncio = "^0.24.0"
+mypy = "^1.13.0"
+requests = "^2.32.0"
+httpx = "^0.27.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
