fix: add poetry-plugin-export for Docker builds
Poetry export command requires poetry-plugin-export plugin in Poetry 1.2+.
This fixes the Docker build failure in GitHub Actions.

--- a/{{cookiecutter.project_dir_name}}/Dockerfile
+++ b/{{cookiecutter.project_dir_name}}/Dockerfile
@@ -7,7 +7,7 @@ RUN adduser --disabled-password --gecos '' appuser
 WORKDIR /server
 
 RUN pip install --upgrade pip
-RUN pip install poetry
+RUN pip install poetry poetry-plugin-export
 
 COPY pyproject.toml poetry.lock ./
 RUN poetry export --without-hashes --without dev -f requirements.txt -o requirements.txt && \
