--- a/{{cookiecutter.project_dir_name}}/pyproject.toml
+++ b/{{cookiecutter.project_dir_name}}/pyproject.toml
@@ -19,6 +19,10 @@ mypy = "^1.13.0"
 requests = "^2.32.0"
 httpx = "^0.27.0"
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+norecursedirs = ["data", ".git", ".github", "app"]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
