--- a/{{cookiecutter.project_dir_name}}/pyproject.toml
+++ b/{{cookiecutter.project_dir_name}}/pyproject.toml
@@ -13,7 +13,7 @@ gunicorn = "^23.0.0"
 PyYAML = "^6.0"
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest-asyncio = "^0.24.0"
 mypy = "^1.13.0"
 requests = "^2.32.0"
