Add private: true to package.json to prevent npm publication
- Prevents accidental publication of website package to npm registry
- This is a site deployment package, not a library

--- a/website/package.json
+++ b/website/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "cookiecutter-fastapi-mongo-website",
 	"version": "1.0.0",
+	"private": true,
 	"description": "Website for cookiecutter-fastapi-mongo template for restful backend API development",
 	"scripts": {
 		"deploy": "gh-pages -d public"
